--- a/CerealSquad/CerealSquad.csproj
+++ b/CerealSquad/CerealSquad.csproj
@@ -78,9 +78,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AMenu.cs" />
+    <Compile Include="Menus\AMenu.cs" />
     <Compile Include="Factories\FontFactory.cs" />
     <Compile Include="InputManager.cs" />
+    <Compile Include="Menus\Buttons\IButton.cs" />
+    <Compile Include="Menus\Buttons\TextButton.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Renderer.cs" />
