--- a/CerealSquad/CerealSquad.csproj
+++ b/CerealSquad/CerealSquad.csproj
@@ -86,6 +86,7 @@
     <Compile Include="SFMLImplementation\Animation.cs" />
     <Compile Include="SFMLImplementation\EntityResources.cs" />
     <Compile Include="SFMLImplementation\TextureFactory.cs" />
+    <Compile Include="FrameClock.cs" />
     <Compile Include="WindowsManager.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -142,7 +143,7 @@
     <Folder Include="Assets\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
