--- a/CerealSquad/CerealSquad.csproj
+++ b/CerealSquad/CerealSquad.csproj
@@ -83,6 +83,7 @@
     <Compile Include="InputManager.cs" />
     <Compile Include="Menus\Buttons\IButton.cs" />
     <Compile Include="Menus\Buttons\TextButton.cs" />
+    <Compile Include="Menus\MenuManager.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Renderer.cs" />
