--- a/CerealSquad/CerealSquad.csproj
+++ b/CerealSquad/CerealSquad.csproj
@@ -81,9 +81,11 @@
     <Compile Include="Menus\AMenu.cs" />
     <Compile Include="Factories\FontFactory.cs" />
     <Compile Include="InputManager.cs" />
+    <Compile Include="Menus\Buttons\ExitButton.cs" />
     <Compile Include="Menus\Buttons\IButton.cs" />
     <Compile Include="Menus\Buttons\TextButton.cs" />
     <Compile Include="Menus\MenuManager.cs" />
+    <Compile Include="Menus\Prefabs.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Renderer.cs" />
