--- a/CerealSquad/CerealSquad.csproj
+++ b/CerealSquad/CerealSquad.csproj
@@ -80,6 +80,10 @@
   <ItemGroup>
     <Compile Include="Menus\Menu.cs" />
     <Compile Include="Factories\FontFactory.cs" />
+    <Compile Include="Graphics\AnimatedSprite.cs" />
+    <Compile Include="Graphics\EntityResource.cs" />
+    <Compile Include="Graphics\IResource.cs" />
+    <Compile Include="Graphics\RegularSprite.cs" />
     <Compile Include="InputManager.cs" />
     <Compile Include="Menus\Buttons\BackButton.cs" />
     <Compile Include="Menus\Buttons\ExitButton.cs" />
@@ -90,10 +94,10 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Renderer.cs" />
-    <Compile Include="SFMLImplementation\AnimatedSprite.cs" />
-    <Compile Include="SFMLImplementation\Animation.cs" />
-    <Compile Include="SFMLImplementation\EntityResources.cs" />
-    <Compile Include="SFMLImplementation\TextureFactory.cs" />
+    <Compile Include="Graphics\SpriteAnimator.cs" />
+    <Compile Include="Graphics\Animation.cs" />
+    <Compile Include="Graphics\ASprite.cs" />
+    <Compile Include="Graphics\TextureFactory.cs" />
     <Compile Include="FrameClock.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
