--- a/CerealSquad/CerealSquad.csproj
+++ b/CerealSquad/CerealSquad.csproj
@@ -107,6 +107,7 @@
     <Compile Include="Graphics\ASprite.cs" />
     <Compile Include="Graphics\TextureFactory.cs" />
     <Compile Include="FrameClock.cs" />
+    <Compile Include="Sample.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
