--- a/CerealSquad/CerealSquad.csproj
+++ b/CerealSquad/CerealSquad.csproj
@@ -81,6 +81,7 @@
     <Compile Include="ARoom.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="AWorld.cs" />
+    <Compile Include="RoomParser.cs" />
     <Compile Include="World.cs" />
     <Compile Include="InputManager.cs" />
     <Compile Include="Program.cs" />
@@ -130,6 +131,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="libsndfile-1.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Maps\TestRoom.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="openal32.dll">
