--- a/CerealSquad/CerealSquad.csproj
+++ b/CerealSquad/CerealSquad.csproj
@@ -80,6 +80,14 @@
   <ItemGroup>
     <Compile Include="Menus\Menu.cs" />
     <Compile Include="Factories\FontFactory.cs" />
+    <Compile Include="Graphics\AnimatedSprite.cs" />
+    <Compile Include="Graphics\EntityResources.cs" />
+    <Compile Include="Graphics\EnvironmentResources.cs" />
+    <Compile Include="Graphics\IResource.cs" />
+    <Compile Include="Graphics\JukeBox.cs" />
+    <Compile Include="Graphics\PaletteManager.cs" />
+    <Compile Include="Graphics\RegularSprite.cs" />
+    <Compile Include="Graphics\SoundBufferFactory.cs" />
     <Compile Include="InputManager.cs" />
     <Compile Include="Menus\Buttons\BackButton.cs" />
     <Compile Include="Menus\Buttons\ExitButton.cs" />
@@ -90,11 +98,12 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Renderer.cs" />
-    <Compile Include="SFMLImplementation\AnimatedSprite.cs" />
-    <Compile Include="SFMLImplementation\Animation.cs" />
-    <Compile Include="SFMLImplementation\EntityResources.cs" />
-    <Compile Include="SFMLImplementation\TextureFactory.cs" />
+    <Compile Include="Graphics\SpriteAnimator.cs" />
+    <Compile Include="Graphics\Animation.cs" />
+    <Compile Include="Graphics\ASprite.cs" />
+    <Compile Include="Graphics\TextureFactory.cs" />
     <Compile Include="FrameClock.cs" />
+    <Compile Include="Sample.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -124,6 +133,16 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\CharacterDefault.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Assets\PokemonMysteryDonjon.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Assets\Shotgunsound.wav">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Assets\wall.gif" />
     <Content Include="csfml-audio-2.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -152,9 +171,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Assets\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
        Other similar extension points exist, see Microsoft.Common.targets.
