--- a/CerealSquad/CerealSquad.csproj
+++ b/CerealSquad/CerealSquad.csproj
@@ -90,10 +90,10 @@
     <Compile Include="Graphics\EntityResources.cs" />
     <Compile Include="Graphics\EnvironmentResources.cs" />
     <Compile Include="Graphics\IResource.cs" />
-    <Compile Include="Graphics\JukeBox.cs" />
+    <Compile Include="Sounds\JukeBox.cs" />
     <Compile Include="Graphics\PaletteManager.cs" />
     <Compile Include="Graphics\RegularSprite.cs" />
-    <Compile Include="Graphics\SoundBufferFactory.cs" />
+    <Compile Include="Factories\SoundBufferFactory.cs" />
     <Compile Include="InputManager.cs" />
     <Compile Include="Menus\Buttons\BackButton.cs" />
     <Compile Include="Menus\Buttons\ExitButton.cs" />
@@ -107,7 +107,7 @@
     <Compile Include="Graphics\SpriteAnimator.cs" />
     <Compile Include="Graphics\Animation.cs" />
     <Compile Include="Graphics\ASprite.cs" />
-    <Compile Include="Graphics\TextureFactory.cs" />
+    <Compile Include="Factories\TextureFactory.cs" />
     <Compile Include="FrameClock.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
