start implementation of crates

--- a/CerealSquad/CerealSquad.csproj
+++ b/CerealSquad/CerealSquad.csproj
@@ -80,6 +80,7 @@
   <ItemGroup>
     <Compile Include="Downloaders\FTPDownloader.cs" />
     <Compile Include="Downloaders\IDownloader.cs" />
+    <Compile Include="Entities\Crates.cs" />
     <Compile Include="GameWorld\ARoom.cs" />
     <Compile Include="GameWorld\Game.cs" />
     <Compile Include="GameWorld\AWorld.cs" />
