--- a/CerealSquad/CerealSquad.csproj
+++ b/CerealSquad/CerealSquad.csproj
@@ -101,6 +101,8 @@
     <Compile Include="GameWorld\GameManager.cs" />
     <Compile Include="GameWorld\RoomParser.cs" />
     <Compile Include="GameWorld\WorldParser.cs" />
+    <Compile Include="Graphics\EllipseShape.cs" />
+    <Compile Include="Graphics\EllipseShapeSprite.cs" />
     <Compile Include="Menus\CharacterSelectMenu.cs" />
     <Compile Include="Menus\Menu.cs" />
     <Compile Include="Factories\FontFactory.cs" />
