--- a/CerealSquad/CerealSquad.csproj
+++ b/CerealSquad/CerealSquad.csproj
@@ -81,6 +81,8 @@
     <Compile Include="Debug.cs" />
     <Compile Include="Downloaders\FTPDownloader.cs" />
     <Compile Include="Downloaders\IDownloader.cs" />
+    <Compile Include="Downloaders\LoadingScreen.cs" />
+    <Compile Include="Downloaders\TaskAwaiter.cs" />
     <Compile Include="EntitySystem\AEnemy.cs" />
     <Compile Include="EntitySystem\AEntity.cs" />
     <Compile Include="EntitySystem\APlayer.cs" />
