--- a/CerealSquad/CerealSquad.csproj
+++ b/CerealSquad/CerealSquad.csproj
@@ -106,6 +106,7 @@
     <Compile Include="GameWorld\WorldParser.cs" />
     <Compile Include="Graphics\EllipseShape.cs" />
     <Compile Include="Graphics\EllipseShapeSprite.cs" />
+    <Compile Include="Graphics\HUD.cs" />
     <Compile Include="Menus\Buttons\NewGameButton.cs" />
     <Compile Include="Menus\CharacterSelectMenu.cs" />
     <Compile Include="Menus\Menu.cs" />
