--- a/CerealSquad/CerealSquad.csproj
+++ b/CerealSquad/CerealSquad.csproj
@@ -87,6 +87,7 @@
     <Compile Include="EntitySystem\AEntity.cs" />
     <Compile Include="EntitySystem\APlayer.cs" />
     <Compile Include="EntitySystem\ATrap.cs" />
+    <Compile Include="EntitySystem\MilkGhost.cs" />
     <Compile Include="EntitySystem\TrapDeliver.cs" />
     <Compile Include="EntitySystem\Ennemy.cs" />
     <Compile Include="EntitySystem\IEntity.cs" />
@@ -106,7 +107,6 @@
     <Compile Include="GameWorld\WorldParser.cs" />
     <Compile Include="Graphics\EllipseShape.cs" />
     <Compile Include="Graphics\EllipseShapeSprite.cs" />
-    <Compile Include="Graphics\HUD.cs" />
     <Compile Include="Menus\Buttons\NewGameButton.cs" />
     <Compile Include="Menus\CharacterSelectMenu.cs" />
     <Compile Include="Menus\Menu.cs" />
@@ -116,6 +116,7 @@
     <Compile Include="Graphics\EnvironmentResources.cs" />
     <Compile Include="Graphics\IResource.cs" />
     <Compile Include="Sounds\JukeBox.cs" />
+    <Compile Include="Graphics\HUD.cs" />
     <Compile Include="Graphics\PaletteManager.cs" />
     <Compile Include="Graphics\RegularSprite.cs" />
     <Compile Include="Factories\SoundBufferFactory.cs" />
@@ -199,9 +200,11 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Assets\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
+  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
