--- a/CerealSquad/CerealSquad.csproj
+++ b/CerealSquad/CerealSquad.csproj
@@ -109,6 +109,7 @@
     <Compile Include="Graphics\HUD.cs" />
     <Compile Include="Menus\Buttons\NewGameButton.cs" />
     <Compile Include="Menus\CharacterSelectMenu.cs" />
+    <Compile Include="Menus\MainMenu.cs" />
     <Compile Include="Menus\Menu.cs" />
     <Compile Include="Factories\FontFactory.cs" />
     <Compile Include="Graphics\AnimatedSprite.cs" />
@@ -125,7 +126,6 @@
     <Compile Include="Menus\Buttons\IButton.cs" />
     <Compile Include="Menus\Buttons\OpenMenuButton.cs" />
     <Compile Include="Menus\MenuManager.cs" />
-    <Compile Include="Menus\Prefabs.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Renderer.cs" />
