--- a/CerealSquad/CerealSquad.csproj
+++ b/CerealSquad/CerealSquad.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Downloaders\TaskAwaiter.cs" />
     <Compile Include="EntitySystem\Projectiles\AProjectile.cs" />
     <Compile Include="EntitySystem\Projectiles\RiceProjectile.cs" />
+    <Compile Include="Factories\EnnemyFactory.cs" />
     <Compile Include="Factories\TrapFactory.cs" />
     <Compile Include="EntitySystem\AEnemy.cs" />
     <Compile Include="EntitySystem\AEntity.cs" />
