Added RoomEntity, fixed IA to work with RoomEntity, fixed Room Doors opening while room was not over

--- a/CerealSquad/CerealSquad.csproj
+++ b/CerealSquad/CerealSquad.csproj
@@ -87,6 +87,7 @@
     <Compile Include="EntitySystem\Projectiles\CoffeeProjectile.cs" />
     <Compile Include="EntitySystem\Projectiles\RiceProjectile.cs" />
     <Compile Include="EntitySystem\RoomDoor.cs" />
+    <Compile Include="EntitySystem\RoomEntity.cs" />
     <Compile Include="Factories\EnnemyFactory.cs" />
     <Compile Include="Factories\TrapFactory.cs" />
     <Compile Include="EntitySystem\AEnemy.cs" />
