--- a/CerealSquad/CerealSquad.csproj
+++ b/CerealSquad/CerealSquad.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Downloaders\TaskAwaiter.cs" />
     <Compile Include="EntitySystem\BaggyEnemy.cs" />
     <Compile Include="EntitySystem\Projectiles\AProjectile.cs" />
+    <Compile Include="EntitySystem\Projectiles\BaggyProjectile.cs" />
     <Compile Include="EntitySystem\Projectiles\CoffeeProjectile.cs" />
     <Compile Include="EntitySystem\Projectiles\RiceProjectile.cs" />
     <Compile Include="EntitySystem\RoomDoor.cs" />
